--- a/txts/note.erb
+++ b/txts/note.erb
@@ -3,4 +3,6 @@ This program will read/write to local directory <%= Dir.home %>/onagova_saves/ha
 
 During 'make your guess' prompt -save {name} command can be use to save your game state
 EX. '-save foo' (without the quotes) will create a save file at <%= Dir.home %>/onagova_saves/hangman/foo.sv
-**
+
+If you have save files in the above mentioned directory a prompt to load a save file will be shown at the start of the game
+****************
